# MediaPlayer2026

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build_ninja.bat  verify-windows-build2.sh
.cursor/plan/: wzmediaplayer重构优化计划_099c2fd2.plan.md
.cursor/skills/: SKILL.md
.cursor/skills/docs-skill/: SKILL.md
.cursor/skills/git-skill/: SKILL.md
.cursor/skills/memory-skill/: SKILL.md
.cursor/skills/project-planning-skill/: SKILL.md
.cursor/skills/test-skill/: SKILL.md
WZMediaPlay/: .gitignore  ApplicationSettings.cpp  BUILD_README.md  BroadcastReceiver.cpp  BroadcastReceiver.h  ErrorRecoveryManager.cpp  ErrorRecoveryManager.h  GlobalDef.cpp  GlobalDef.h  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  PlayController.cpp  PlayController.h  PlaybackStateMachine.cpp  PlaybackStateMachine.h  RemoteControlServer.cpp  ShaderManager.cpp  ShaderManager.h  SloganWidget.cpp  SloganWidget.h  StereoVideoWidget.cpp  StereoVideoWidget.h  SystemMonitor.cpp  SystemMonitor.h  TcpServerHelper.cpp  TcpSocket.h  ThreadSyncManager.cpp  ThreadSyncManager.h  WZMediaPlay.vcxproj  WZMediaPlay.vcxproj.filters  build.bat  build.ps1  crash_handler.cpp  crash_handler.h  language_zh_CN.ts  main.cpp
WZMediaPlay/Resources/: Info.plist
WZMediaPlay/Shader/: fragment.glsl  fragment_2d_debug.glsl  vertex.glsl
WZMediaPlay/camera/: CameraManager.cpp  CameraManager.h  CameraOpenGLWidget.cpp  CameraOpenGLWidget.hpp  CameraRenderer.cpp  CameraRenderer.h
WZMediaPlay/config/: SystemConfig.ini
WZMediaPlay/gui/: AdvertisementWidget.cpp  AdvertisementWidget.h  AdvertisementWidget.ui  CustomSlider.h  DrawWidget.cpp  FullscreenTipsWidget.cpp  SettingsDialog.ui
WZMediaPlay/playlist/: DropListWidget.cpp  PlayListData.cpp  PlayListData.h  PlayListManager.cpp  PlayListManager.h  Playlist.cpp  Playlist.h  PlaylistItem.cpp  PlaylistItem.h
WZMediaPlay/test_support/: TestPipeServer.cpp  TestPipeServer.h
WZMediaPlay/tests/: ErrorRecoveryManagerTest.cpp  PlaybackStateMachineTest.cpp  SeekingAutomatedTest.cpp  SeekingStateMachineTest.cpp  test_logger_stub.cpp
WZMediaPlay/videoDecoder/: AVClock.cpp  AVClock.h  AVThread.cpp  AVThread.h  AudioThread.cpp  AudioThread.h  Decoder.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  DemuxerThread.cpp  DemuxerThread.h  FFDecHW.cpp  FFDecHW.h  FFDecSW.cpp  FFDecSW.h  Frame.cpp  Frame.h  FrameBuffer.cpp  FrameBuffer.h  OpenALAudio.cpp  OpenALAudio.h  RendererFactory.cpp  RendererFactory.h  Statistics.cpp  Statistics.h  VideoAdjustment.hpp  VideoFilter.cpp  VideoFilter.h  VideoOutputCommon.cpp  VideoOutputCommon.hpp  VideoRenderer.cpp  VideoRenderer.h  VideoThread.cpp  VideoThread.h  VideoWidgetBase.cpp  VideoWidgetBase.h  chronons.h  ffmpeg.h  hardware_decoder.cc  (+2 more)
WZMediaPlay/videoDecoder/opengl/: DebugImageSaver.cpp  DebugImageSaver.h  (+22 more)
docs/: 20260310-opengl-rendering-black-screen-debug.md  AVThread重构与Seeking修复计划.md  BUG_FIXES.md  BUG_REGISTRY_2026-03-14.md  COMPILE_ERROR_FIX.md  FFmpegView改造计划.md  FIX_SUMMARY_FFDecHW.md  GLM-progress.md  GLM代码关键信息.md  GLM改进建议.md  GLM改进步骤详细规划.md  HARDWARE_DECODE_FIX.md  MAC_FIX_SUMMARY.md  Mutex生命周期修复总结.md  PACKAGE_FIX_SUMMARY.md  PACKAGING_MAC.md  Playback_Crashed.md  REFACTORING_PROGRESS_PHASE1.md  REFACTORING_PROGRESS_PHASE2.md  SHORTCUTCHANGES.md  Seeking花屏与播放完成修复总结.md  Stability_Fixes_Summary.md  TODO.md  TODO_CURRENT.md  ffmpeg-capability.txt  rendering_architecture_usage.md  与QMPlayer2相比，修改成更优雅稳定的代码.md  全局优化与稳定性改进方案.md  全局优化完成总结.md  全局优化实施总结.md  功能状态梳理与重构反思.md  单元测试与集成测试计划.md  小步快跑式重构计划.md  已知BUG记录.md  新建文件完成总结.md  架构分析与稳定性改进方案.md  现有文件修改计划.md  稳定性修复总结.md  线程同步优化完成总结.md  线程生命周期管理修复总结.md  (+6 more)
docs/TDD/: Catch2.md
docs/cursor/: BUG_ANALYSIS_AND_FIX_PLAN.md  FULL_BUG_REGISTRY.md
docs/lwPlayer/: WZMediaPlayer代码分析-可优化规划-步骤拆解.md  当前任务优先级.md  当前任务总结.md  当前进度和下一步计划.md  架构改进方案_CameraWidget同级化.md  架构重构完成总结.md  渲染架构关系图.md  硬件解码重构完成总结.md  硬件解码重构计划.md  重构进展记录_20260209.md  阶段四五六实施计划.md  阶段四五六实施进展.md
docs/pdf/: Untitled
docs/plans/: 2025-03-02-closed-loop-test-enhancement-design.md  2025-03-02-closed-loop-test-enhancement-implementation.md  2026-02-26-progressive-bug-fix-plan.md  2026-02-26-tdd-stability-improvement-design.md  2026-02-26-tdd-stability-improvement.md  2026-03-09-logger-early-init-fix-design.md  2026-03-09-logger-early-init-fix.md  baseline_analysis_20260226.md
new-docs/: 2025-03-02-closed-loop-enhancement-summary.md  2026-03-09-remaining-issues-fix-design.md  2026-03-09-remaining-issues-fix.md  2026-03-11-rendering-bug-analysis.md  2026-03-11-rendering-verification-design.md  CODE_REVIEW_20260303.md  Demuxer_vs_Timer_arch_compare.md  FULL_BUG_REGISTRY.md  GUI_Feature_Comparison.md  HARDWARE_DECODE_FIX_V2.md  v1.0.8_function_comparison.md
scripts/: package_mac.sh
testing/pyobjc/: config.py  requirements.txt  run_all_tests.py
testing/pywinauto/: PLAN.md  QUICKSTART.md  README.md  README_CLOSED_LOOP.md  README_FULL.md  README_REALTIME_LOG_MONITORING.md  STATUS.md  config.ini  config.py  debug_ui.py  log_monitor.py  main.py  requirements.txt  run.bat  run_all_tests.py  run_closed_loop_tests.py  run_comprehensive_tests.py  test_3d_features.py  test_audio.py  test_av_sync.py  test_edge_cases.py  test_hardware_decoding.py  test_progress_seek.py  test_qt6_direct.py  ui_inspector.py  unified_closed_loop_tests.py
v1.0.8-srcs/: README.md
v1.0.8-srcs/WZMediaPlay/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AdvertisementWidget.cpp  AdvertisementWidget.h  ApplicationSettings.cpp  ApplicationSettings.h  BroadcastReceiver.cpp  BroadcastReceiver.h  CustomSlider.cpp  CustomTabStyle.cpp  CustomTabStyle.h  DrawWidget.cpp  DrawWidget.h  DrawWidget.ui  DropListWidget.cpp  DropListWidget.h  FFmpegView.cc  FFmpegView.h  FloatButton.cpp  FloatButton.h  FloatButton.ui  FullscreenTipsWidget.cpp  FullscreenTipsWidget.h  GlobalDef.cpp  GlobalDef.h  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  PlayListData.cpp  PlayListData.h  PlayListPage.cpp  PlayListPage.h  PlayListPage.ui  RemoteControlServer.h  SettingsDialog.cpp  SettingsDialog.h  SubtitleWidget.cpp  SubtitleWidget.h  (+24 more)
(+107 files in other folders)
